<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/side_margin"
    tools:context=".fragments.login.LoginFragment">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="top"
        android:text="@string/welcome"
        android:textColor="@color/base_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_hint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:fontFamily="@font/montserrat_medium"
        android:text="@string/hint_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingBottom="28dp"
         />

    <EditText
        android:id="@+id/et_login"
        android:padding="16dp"
        android:textColorHint="@color/hint_color"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="8dp"
        android:hint="@string/login"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:background="@drawable/corner_radius_button"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_password"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:textColorHint="@color/hint_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/corner_radius_button"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        tools:ignore="TextFields" />

   <EditText
       android:id="@+id/et_confirm_password"
       android:textCursorDrawable="@drawable/cursor_drawable"
       android:layout_width="match_parent"
       android:layout_height="?actionBarSize"
       android:textColorHint="@color/hint_color"
       android:padding="8dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
       android:background="@drawable/corner_radius_button"
       android:hint="@string/confirm_password"
       android:autofillHints="password"
       tools:ignore="TextFields" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/base_blue"
        android:fontFamily="@font/montserrat_medium"
        app:cornerRadius="16dp"
        android:padding="14dp"
        android:text="@string/confirm"
         />
</LinearLayout>