<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.myprofile.MyProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="16dp"
        android:elevation="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/profile"
                android:src="@drawable/av" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@null"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/base_blue"
                android:textColorHint="@color/grey_background"
                android:textCursorDrawable="@drawable/cursor_drawable" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:background="@null"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_background"
                android:textCursorDrawable="@drawable/cursor_drawable" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/side_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_number_phone"
            android:textColor="@color/base_blue"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_textfield"
            android:padding="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/number_phone"
            android:gravity="center"
            android:drawableStart="@drawable/phone_icon"
            android:autofillHints="phone" />

        <EditText
            android:id="@+id/et_description"
            android:textColor="@color/base_blue"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_textfield"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/description"
            android:gravity="center"
            android:drawableStart="@drawable/news_icon"
            android:autofillHints="phone" />

        <EditText
            android:id="@+id/et_other_social_network"
            android:textColor="@color/base_blue"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_textfield"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/other_social_network"
            android:gravity="center"
            android:drawableStart="@drawable/share_icon"
            android:autofillHints="phone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/corner_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:fontFamily="@font/montserrat_medium"
            android:padding="14dp"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            android:background="@drawable/corner_radius_button"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginTop="8dp"
            app:backgroundTint="@null"
            android:fontFamily="@font/montserrat_medium"
            android:padding="14dp"
            android:textColor="@color/black"
            android:background="@drawable/corner_radius_button"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>