<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/corner_radius_header"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageView
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:src="@drawable/av"
    android:layout_marginTop="16dp"
    android:layout_marginStart="36dp"
    android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/base_blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/name"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="36dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_name_user"
        app:layout_constraintLeft_toLeftOf="@id/tv_name_user"
        android:text="@string/username"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:elevation="16dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:background="@drawable/on_button_action"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:layout_marginEnd="16dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>